# ics2dav

./: .gitignore  Dockerfile  LICENSE  README.md  crontab  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
